--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,35 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">The Encyclopedia of Anime</string>
     <string name="textAnimeName">textAnimeName</string>
     <string name="textType">textType</string>
+    <string name="textUnknown">Unknown</string>
+    <string name="m_January" tools:ignore="ExtraTranslation">January</string>
+    <string name="m_February" tools:ignore="ExtraTranslation">February</string>
+    <string name="m_March" tools:ignore="ExtraTranslation">March</string>
+    <string name="m_April" tools:ignore="ExtraTranslation">April</string>
+    <string name="m_May" tools:ignore="ExtraTranslation">May</string>
+    <string name="m_June" tools:ignore="ExtraTranslation">June</string>
+    <string name="m_July" tools:ignore="ExtraTranslation">July</string>
+    <string name="m_August" tools:ignore="ExtraTranslation">August</string>
+    <string name="m_September" tools:ignore="ExtraTranslation">September</string>
+    <string name="m_October" tools:ignore="ExtraTranslation">October</string>
+    <string name="m_November" tools:ignore="ExtraTranslation">November</string>
+    <string name="m_December" tools:ignore="ExtraTranslation">December</string>
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="load_data">Loading…</string>
 </resources>
